--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,9 +24,11 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/stuckOnAnIsland.jar
+dist.jar=${dist.dir}/StuckOnAnIsland.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.stuckOnAnIsland-src=stuckOnAnIsland/src
+file.reference.stuckOnAnIsland-test=stuckOnAnIsland/test
 includes=**
 jar.compress=false
 javac.classpath=
@@ -41,8 +43,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.junit.classpath}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=stuckonanisland.StuckOnAnIsland
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -72,5 +74,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.stuckOnAnIsland-src}
+test.src.dir=${file.reference.stuckOnAnIsland-test}
